2173: refactor old forbidden exceptions more detail (#901)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,12 @@
 resource.not_found = Couldn't find {resourceType} with id: {resourceId}.
+name.already_exists = The {name} already exists.
+email.already_verified = The account {verifiedEmail} is already verified.
+user.not_found_by_email = User with email {email} not found.
+user.not_found_by_invitation_token = User with token {token} not found.
+not_found = Couldn't find {name}.
+deletion.failed_by_cascade = Couldn't remove {target} since there are one or more employee assigned to it.
+authentication.failed = Wrong email or password.
+password.duplicated = New password cannot be the same as the old one.
+work_email.duplicated = New work email cannot be the same as the old one.
+permission.denied = Permission denied.
+time_off.exceed = Amount exceeds max balance of {maxBalance} hours.
