2337: Refactor general exception (#938)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,4 @@ work_email.duplicated = New work email cannot be the same as the old one.
 permission.denied = Permission denied.
 time_off.exceed = Amount exceeds max balance of {maxBalance} hours.
 email.expired = Email is expired.
+user_deletion.failed = Delete user failed.
