2369: Refactor all awsexception (#942)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,6 @@ permission.denied = Permission denied.
 time_off.exceed = Amount exceeds max balance of {maxBalance} hours.
 email.expired = Email is expired.
 user_deletion.failed = Delete user failed.
+file_movement.failed = Move file failed.
+file_deletion.failed = Delete file failed.
+file_upload.failed = Upload file failed.
