2336: Refactor file validate exceptions (#945)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,6 @@ user_deletion.failed = Delete user failed.
 file_movement.failed = Move file failed.
 file_deletion.failed = Delete file failed.
 file_upload.failed = Upload file failed.
+file_format.not_acceptable = File format error.
+file_size.exceed = File size exceeds max size of {maxSize}.
+file_size.too_small = File size is too small.
