2370: Refactor auth0 exception (#948)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,4 @@ file_upload.failed = Upload file failed.
 file_format.not_acceptable = File format error.
 file_size.exceed = File size exceeds max size of {maxSize}.
 file_size.too_small = File size is too small.
+verification_email_send.failed = Verification email send failed.
