2597: create limit for employee inviting (#1147)
* add a new interceptor

* add locked_at field for user entity, add some relevant method for userService

* improve logic, just consume a token when a request incoming, if this request consumed a token and get a successful response, then check bucket, if get failed, then give back a token to the bucket and unlock currentUser

* improve intercepting logic, just intercept request with post

* fix bug

* add redisson to cache buckets, add dayBuckets

* code refactor, add buckethelper

* code refactor, fix bug

* add application, move interceptor to employee package

* improve changelog

* move comment

* improve method name

* improve field name and method name

* rename bucketHelper to bucketManager

* improve with review

* add exception handle

* add UserInvitationRateLimitingInterceptorTest

* rename some fields and methods

* review

* fix tests

* add a controller method
improve a method anem

* delete dumplicate class

* change some text
add a new exception and error_mapping to show the message to the front-end

* resolve conflicts

* fix a unit test

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ name.already_exists = The {name} already exists.
 email.already_verified = The account {verifiedEmail} is already verified.
 user.not_found_by_email = User with email {email} not found.
 user.not_found_by_invitation_token = User with token {token} not found.
+user.invitation_capability_frozen = You have hit your limit for adding new employees to the HRIS. Please contact hris-help@simplyhired.com for more information.
 not_found = Couldn't find {name}.
 deletion.failed_by_cascade = Couldn't remove {target} since there are one or more employee assigned to it.
 authentication.failed = Wrong email or password.
@@ -19,3 +20,4 @@ file_format.not_acceptable = File format error.
 file_size.exceed = File size exceeds max size of {maxSize}.
 file_size.too_small = File size is too small.
 verification_email_send.failed = Verification email send failed.
+too_many_requests = Too many requests.
