3133: Add Timezone when Users are created. (#1167)
* Add Timezone when Users are created.

* Add Timezone when Users are created.

* Update tests.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,4 @@ file_size.exceed = File size exceeds max size of {maxSize}.
 file_size.too_small = File size is too small.
 verification_email_send.failed = Verification email send failed.
 too_many_requests = Too many requests.
+zip_code.error = Office zipCode is error.
