--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,24 +1,25 @@
-resource.not_found = Couldn't find {resourceType} with id: {resourceId}.
-name.already_exists = The {name} already exists.
-email.already_verified = The account {verifiedEmail} is already verified.
-user.not_found_by_email = User with email {email} not found.
-user.not_found_by_invitation_token = User with token {token} not found.
-user.invitation_capability_frozen = You have hit your limit for adding new employees to the HRIS. Please contact hris-help@simplyhired.com for more information.
-not_found = Couldn't find {name}.
-deletion.failed_by_cascade = Couldn't remove {target} since there are one or more employee assigned to it.
-authentication.failed = Wrong email or password.
-password.duplicated = New password cannot be the same as the old one.
-work_email.duplicated = New work email cannot be the same as the old one.
-permission.denied = Permission denied.
-time_off.exceed = Amount exceeds max balance of {maxBalance} hours.
-email.expired = Email is expired.
-user_deletion.failed = Delete user failed.
-file_movement.failed = Move file failed.
-file_deletion.failed = Delete file failed.
-file_upload.failed = Upload file failed.
-file_format.not_acceptable = File format error.
-file_size.exceed = File size exceeds max size of {maxSize}.
-file_size.too_small = File size is too small.
-verification_email_send.failed = Verification email send failed.
-too_many_requests = Too many requests.
-liquibase.failed = Sign up failed.
+resource.not_found=Couldn't find {resourceType} with id: {resourceId}.
+name.already_exists=The {name} already exists.
+email.already_verified=The account {verifiedEmail} is already verified.
+user.not_found_by_email=User with email {email} not found.
+user.not_found_by_invitation_token=User with token {token} not found.
+user.invitation_capability_frozen=You have hit your limit for adding new employees to the HRIS. Please contact hris-help@simplyhired.com for more information.
+not_found=Couldn't find {name}.
+deletion.failed_by_cascade=Couldn't remove {target} since there are one or more employee assigned to it.
+authentication.failed=Wrong email or password.
+password.duplicated=New password cannot be the same as the old one.
+work_email.duplicated=New work email cannot be the same as the old one.
+permission.denied=Permission denied.
+time_off.exceed=Amount exceeds max balance of {maxBalance} hours.
+email.expired=Email is expired.
+user_deletion.failed=Delete user failed.
+file_movement.failed=Move file failed.
+file_deletion.failed=Delete file failed.
+file_upload.failed=Upload file failed.
+file_format.not_acceptable=File format error.
+file_size.exceed=File size exceeds max size of {maxSize}.
+file_size.too_small=File size is too small.
+verification_email_send.failed=Verification email send failed.
+too_many_requests=Too many requests.
+liquibase.failed=Sign up failed.
+overtime_policy.duplicate_name=Policy name already exists.
